fix some layout issues with height

--- a/app/assets/stylesheets/AdminLTE/_core.scss
+++ b/app/assets/stylesheets/AdminLTE/_core.scss
@@ -5,9 +5,7 @@
 html,
 body {
   min-height: 100%;
-  .layout-boxed & {
-    height: 100%;
-  }
+  height: 100%;
 }
 
 body {
@@ -25,25 +23,12 @@ body {
   min-height: 100%;
   position: relative;
   overflow: hidden !important;
-  .layout-boxed & {
-    max-width: 1250px;
-    margin: 0 auto;
-    min-height: 100%;
-    box-shadow: 0 0 8px rgba(0,0,0,0.5);
-    position: relative;
-  }
-}
-
-.layout-boxed {
-  background: url($boxed-layout-bg-image-path) repeat fixed;
 }
 
 /*
  * Content Wrapper - contains the main content
- * ```.right-side has been deprecated as of v2.0.0 in favor of .content-wrapper  ```
  */
 .content-wrapper,
-.right-side,
 .main-footer {
   //Using disposable variable to join statements with a comma
   $transition-rule: $transition-speed $transition-fn,
@@ -72,12 +57,12 @@ body {
   }
 }
 
-.content-wrapper,
-.right-side {
-  min-height: 100%;
+.content-wrapper {
+  min-height: 100vh;
   background-color: $body-bg;
   z-index: 800;
 }
+
 .main-footer {
   background: #fff;
   padding: 15px;
@@ -97,16 +82,10 @@ body {
     right: 0;
     left: 0;
   }
-  .content-wrapper,
-  .right-side {
+  .content-wrapper {
     padding-top: 50px;
     @media (max-width: $screen-header-collapse) {
       padding-top: 100px;
-    }
-  }
-  &.layout-boxed {
-    .wrapper {
-      max-width: 100%;
     }
   }
 }
