--- a/app/assets/stylesheets/AdminLTE/_sidebar-mini.scss
+++ b/app/assets/stylesheets/AdminLTE/_sidebar-mini.scss
@@ -11,7 +11,6 @@
 
       //Apply the new margining to the main content and footer
       .content-wrapper,
-      .right-side,
       .main-footer {
         margin-left: 50px!important;
         z-index: 840;
